--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -31,7 +31,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_margin="8dp"
-                android:layout_toEndOf="@+id/imgProduct"
+                android:layout_toEndOf="@+id/imgWd"
                 android:text="تنانتا"
                 android:textColor="#2980B9"
                 android:textStyle="bold" />
