--- a/app/src/main/res/layout/startup.xml
+++ b/app/src/main/res/layout/startup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash">
+    android:background="@drawable/beg">
 
     <Button
         android:id="@+id/btnAgain"
@@ -22,13 +22,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:gravity="center"
         android:padding="10dp"
         android:text="باشگاه من"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#fff"
         android:textSize="32sp"
-        android:textStyle="normal|bold|italic" />
+        android:textStyle="normal|bold|italic"
+        android:visibility="invisible" />
 
     <ImageView
         android:id="@+id/imageView2"
