--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ea1e6f</color>
-    <color name="colorPrimaryDark">#e340ff</color>
+    <color name="colorPrimary">#4A5AA7</color>
+    <color name="colorPrimaryDark">#4A5A88</color>
     <color name="colorAccent">#ff6d00</color>
+    <color name="colorbgtxt">#079cff</color>
 </resources>
