--- a/app/src/main/res/layout/row_view.xml
+++ b/app/src/main/res/layout/row_view.xml
@@ -29,55 +29,56 @@
 
             >
 
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentRight="false"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginRight="2dp"
-                android:layout_marginTop="2dp"
-                android:layout_toEndOf="@+id/imgWd"
-                android:padding="8dp"
-                android:textColor="#2980B9"
-                android:textStyle="bold" />
-
-            <ImageView
-                android:id="@+id/imgWd"
-                android:layout_width="123dp"
-                android:layout_height="match_parent"
-
-                android:layout_alignBottom="@+id/title"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginBottom="-80dp"
-                android:padding="20dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/strong" />
-
-            <TextView
-                android:id="@+id/year"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/genre"
-                android:padding="8dp"
-                android:visibility="invisible" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/genre"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/title"
-                android:layout_marginTop="11dp"
-                android:padding="8dp"
-                android:textColor="#222" />
+                <ImageView
+                    android:id="@+id/imgWd"
+                    android:layout_width="match_parent"
+                    android:layout_height="64dp"
+
+                    android:layout_alignBottom="@+id/title"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/listicon" />
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentRight="false"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_gravity="center"
+                    android:layout_toEndOf="@+id/imgWd"
+                    android:layout_weight="0.5"
+                    android:gravity="center"
+                    android:text="sdfsdfsdfs"
+                    android:textColor="#000"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <ImageView
+                    android:id="@+id/imgWd3"
+                    android:layout_width="match_parent"
+                    android:layout_height="64dp"
+
+                    android:layout_alignBottom="@+id/title"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_weight="1"
+                    android:padding="10dp"
+                    android:scaleType="fitCenter"
+                    android:src="@drawable/listicon" />
+
+            </LinearLayout>
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
